# pulumi-proxmox-provider

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Pulumi.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: example_lxc.py
src/pulumi_proxmox_provider/: __init__.py  config.py  provider.py  proxmox_api.py  proxmox_lxc.py  proxmox_vm_qemu.py
tests/: test_provider.py
